tests/paczka1/fuzzy1/54200853.err
Error in line 4: ltERqzJcaNx A54 74,2
Error in line 19: V4Wy46 A54 97,3
Error in line 11: ltERqzJcaNx S346 4,6
Error in line 30: ltERqzJcaNx S11 8,5
Error in line 32: S690 S690 152,2
Error in line 26: O8xf A54 46,0
Error in line 33: S690 S11 84,9
